--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "static-data",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "A module creating saving static json files and then loading them from your application",
   "main": "dist/index.js",
-	"repository":{ 
-		"type" : "git", 
-		"url" : "https://github.com/jeffreyyoung/static-data"
-  },	
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeffreyyoung/static-data"
+  },
   "scripts": {
-    "build": "babel src --presets babel-preset-es2017 --out-dir dist",
+    "build": "babel src -d dist",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +16,6 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2017": "^6.24.1"
+    "babel-preset-env": "^1.6.1"
   }
 }
