--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0"
   }
 }
